--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@telegram-apps/sdk": "^1.1.3",
+		"@twa-dev/sdk": "^7.8.0",
 		"lodash-es": "^4.17.21",
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
